<resources>
    <string name="app_name">Shop</string>

    <string name="product_list_is_empty">The product list is empty now</string>

    <string name="product">Product:</string>

    <string name="price">Price:</string>

    <string name="quantity">Quantity:</string>

    <string name="currency_for_price">USD</string>

    <string name="product_name_hint">Name</string>

    <string name="product_price_hint">0</string>

    <string name="product_quantity_hint">0</string>

    <string name="product_increase_button">+</string>

    <string name="product_decrease_button">-</string>

    <string name="product_email_hint">Type your message here …</string>

    <string name="order_now_button">Order Now!</string>

    <string name="sale_button">Sale</string>

    <string name="menu_action_save">Save</string>

    <string name="menu_action_delete">Delete</string>

    <string name="menu_action_send_email">Send e-mail</string>

    <string name="menu_action_insert_product">Insert a new Product</string>

    <string name="menu_action_delete_all_entries">Delete all entries</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit a Product</string>

    <string name="msg_write_the_quantity">Please, enter the quantity</string>

    <string name="error_msg_quantity_required_input">Enter the quantity first</string>

    <string name="error_msg_picture_required">Picture is required</string>

    <string name="error_msg_name_required">Name is required</string>

    <string name="error_msg_price_required">Price is required</string>

    <string name="error_msg_valid_price_required">Valid price is required</string>

    <string name="error_msg_valid_quantity_required">Valid quantity is required</string>

    <string name="error_msg_mail_required">Email for the supplier is required</string>

    <string name="error_msg_quantity_required">Quantity is required</string>

    <string name="error_msg_email_required">Message to the supplier is required</string>

    <string name="insert_product_failed">Insert product error</string>

    <string name="insert_product_success">Product was inserted successfully</string>

    <string name="update_product_failed">Update product error</string>

    <string name="update_product_success">Product was updated successfully</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="delete_product_successful">Product is deleted</string>

    <string name="delete_product_failed">Error with deleting product</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="product_is_sold">The product is sold</string>

    <string name="mail_subject">Order the product</string>

    <string name="mail_stream">Hello</string>

    <string name="mail_email">someperson@gmail.com</string>

    <string name="snak_bar_msg">Fill all fields and save the data</string>

    <string name="image_selector">Select Image</string>

    <string name="priceIs">Price:</string>

    <string name="text_about_order"><b>Info:</b> To order the product right now, just click on the Order button and send the email to the official supplier. We will contact you in the next 24 hours</string>
</resources>

